src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Fields__c</fullName>
        <label>Incident Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incident State</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Short Description</fullName>
                </value>
                <value>
                    <fullName>Sys ID</fullName>
                </value>
                <value>
                    <fullName>Contact Type</fullName>
                </value>
                <value>
                    <fullName>Sys Updated On</fullName>
                </value>
                <value>
                    <fullName>u_sftype</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contact type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>incident_state__c</fullName>
        <defaultValue>false</defaultValue>
        <label>incident_state</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>short_description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>short_description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sys_id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sys id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sys_updated_onONLast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sys updated onONLast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sys_updated_on__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sys updated on</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>u_sftype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>u_sftype</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Now Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>u_sftype__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>